Updated to default CocoaPods implementation

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,5 @@ xcuserdata
 .svn
 CVS
 
-# cocoapods (keep libraries since the pod install doesn't configure what I need)
-Pods/build/*
-Pods/Headers/*
-Pods/Documentation/*
+# cocoapods (run 'pod install')
+Pods/*
